--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,36 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fitsSystemWindows="true"
-    android:background="@android:color/holo_blue_dark">
+    app:cardCornerRadius="8dp">
 
-    <TextView
-        android:id="@+id/header_title"
+    <androidx.constraintlayout.widget.ConstraintLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="3dp"
-        android:drawablePadding="12dp"
-        android:gravity="center_vertical"
-        android:text="@string/app_name"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
-        app:drawableStartCompat="@mipmap/ic_launcher"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:fitsSystemWindows="true"
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp"
-        android:text="C"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
-        app:layout_constraintEnd_toEndOf="@+id/header_title"
-        app:layout_constraintStart_toStartOf="@+id/header_title"
-        app:layout_constraintTop_toBottomOf="@+id/header_title" />
+        android:background="@drawable/leather">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/circleImageView"
+            android:layout_width="99dp"
+            android:layout_height="103dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_bulldog_1456110"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="8dp"/>
+
+        <TextView
+            android:id="@+id/header_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             android:textSize="20sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/akronim"
+            android:layout_marginStart="5dp"
+            android:gravity="center_vertical"
+            android:padding="8dp"
+            android:text="myAwesomeApp"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
+            android:textColor="@color/Crimson"
+
+            app:layout_constraintBottom_toTopOf="@+id/circleImageView"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="©"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
+            app:layout_constraintEnd_toEndOf="@+id/header_title"
+            app:layout_constraintStart_toStartOf="@+id/header_title"
+            app:layout_constraintTop_toBottomOf="@+id/header_title" />
+
+        <TextView
+            android:id="@+id/userName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            tools:text="pene"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
+            app:layout_constraintEnd_toEndOf="@+id/circleImageView"
+            app:layout_constraintStart_toStartOf="@+id/circleImageView"
+            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
