--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:defaultNavHost="true"
-        android:background="@drawable/preview"
+        android:background="@drawable/greenskin"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,7 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
-            android:visibility="gone"
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize">
             <include layout="@layout/actionbar_layout"/>
@@ -47,7 +47,11 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:menu="@menu/drawer_menu"
+        android:background="@drawable/greenskin"
+        app:itemIconTint="@color/Crimson"
         android:fitsSystemWindows="true"
+        app:itemTextColor="@color/Crimson"
+        app:itemIconSize="25dp"
         />
 
 
