--- a/app/src/main/res/anim/infinite_rotation.xml
+++ b/app/src/main/res/anim/infinite_rotation.xml
@@ -7,6 +7,7 @@
         android:pivotX="50%"
         android:pivotY="50%"
         android:repeatCount="infinite"
-        android:startOffset="0"
-        android:toDegrees="360" />
+        android:startOffset="5000"
+        android:toDegrees="360"
+       />
 </set>
