--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,9 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
-            android:layout_marginTop="30dp"
+
             android:layout_width="match_parent"
+            android:background="@color/Crimson"
             android:layout_height="?attr/actionBarSize">
             <include layout="@layout/actionbar_layout"/>
 
