--- a/app/src/main/res/layout/custom_drop_down_adapter.xml
+++ b/app/src/main/res/layout/custom_drop_down_adapter.xml
@@ -24,7 +24,7 @@
         android:background="@drawable/transparent"
         android:textSize="24sp"
         android:layout_marginStart="60dp"
-        tools:text="pene"
+        tools:text="mi enorme pene"
         android:textStyle="bold"
         android:textColor="@color/Crimson"
         android:fontFamily="@font/akronim"
