--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="grayBK">#4E4E4E</color>
+   <color name="itemRowBK">#001017</color>
+    <color name="appDarkmain">#001E2C</color>
+    <color name="logoBlue">#009FEC</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -170,7 +174,6 @@
     <color name="colorGray">#dedede</color>
     <color name="colorDarkGray">#b4b4b4</color>
     <color name="colorBlue">#2962FF</color>
-
 
 
     <!-- colors for picker gallery-->
