--- a/app/src/main/res/layout/custom_drop_down_adapter.xml
+++ b/app/src/main/res/layout/custom_drop_down_adapter.xml
@@ -1,35 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+<TextView
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    app:cardCornerRadius="8dp"
-    android:background="@drawable/transparent"
-    android:padding="8dp">
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/img"
-        android:layout_gravity="start"
-
-        android:layout_marginStart="5dp"
-        android:contentDescription="@string/app_name"
-        tools:src="@drawable/ic_bulldog_1456110"/>
-
-    <TextView android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/transparent"
-        android:textSize="24sp"
-        android:layout_marginStart="60dp"
-        tools:text="mi enorme pene"
-        android:textStyle="bold"
-        android:textColor="@color/Crimson"
-        android:fontFamily="@font/akronim"
-        android:paddingStart="10dp"
-        android:layout_gravity="center_vertical"
-        android:id="@+id/text"/>
-
-</RelativeLayout>
+    xmlns:tools="http://schemas.android.com/tools"
+    android:gravity="center"
+    tools:text="pene"
+    android:layout_height="wrap_content"
+    android:padding="16dp"
+    android:textColor="@color/WhiteSmoke"
+    android:fontFamily="@font/montserrat_bold"
+    android:textStyle="bold"
+    
+    android:ellipsize="end"
+    android:maxLines="1"
+    android:textAppearance="?attr/textAppearanceSubtitle1"
+    xmlns:app="http://schemas.android.com/apk/res-auto" />
