--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -13,35 +13,20 @@
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
 
-        android:background="@color/Crimson">
+        android:background="@color/appDarkmain">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/circleImageView"
+            android:layout_marginTop="25dp"
             android:layout_width="99dp"
             android:layout_height="103dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_pug_4862083"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="8dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/header_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-             android:textSize="20sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/akronim"
-            android:layout_marginStart="5dp"
-            android:gravity="center_vertical"
-            android:padding="8dp"
-            android:text="myAwesomeApp"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
-            android:textColor="@color/WhiteSmoke"
 
-            app:layout_constraintBottom_toTopOf="@+id/circleImageView"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/textView2"
@@ -49,20 +34,27 @@
             android:layout_height="match_parent"
 
 
+            android:fontFamily="@font/montserrat_bold"
             android:text="©"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
-            app:layout_constraintEnd_toEndOf="@+id/header_title"
-            app:layout_constraintStart_toStartOf="@+id/header_title"
-            app:layout_constraintTop_toBottomOf="@+id/header_title" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/title"
+            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />
+
 
         <TextView
-            android:id="@+id/userName"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            tools:text="pene"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/montserrat_bold"
+            android:layout_marginStart="5dp"
+            android:gravity="center_vertical"
+            android:padding="8dp"
+            android:text="@string/App_name"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
+            android:textColor="@color/WhiteSmoke"
             app:layout_constraintEnd_toEndOf="@+id/circleImageView"
             app:layout_constraintStart_toStartOf="@+id/circleImageView"
             app:layout_constraintTop_toBottomOf="@+id/circleImageView" />
