--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,12 +2,13 @@
     <!-- Base application theme. -->
     <style name="Theme.TFG" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/Crimson</item>
-        <item name="colorPrimaryVariant">@color/Crimson</item>
+        <item name="colorPrimary">@color/logoBlue</item>
+        <item name="colorPrimaryVariant">@color/appDarkmain</item>
         <item name="colorOnPrimary">@color/white</item>
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/logoBlue</item>
+        <item name="colorSecondaryVariant">@color/logoBlue</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
@@ -30,5 +31,8 @@
         <item name="android:popupBackground">#DFFFFFFF</item>
     </style>
 
+    <style name="changeBackgroundColor" parent="Widget.Material3.TextInputLayout.FilledBox">
+        <item name="colorSurface">@color/grayBK</item>
+    </style>
 
 </resources>
