--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -51,6 +51,7 @@
             />
         <!-- landing layout start here -->
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="25dp"
             android:id="@+id/rv_pets"
             android:padding="25dp"
             android:layout_width="match_parent"
